Updated Site files with Comments

--- a/personal_site/about.html
+++ b/personal_site/about.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     
+    <!-- This is Navbar/Header Section-->
     <nav>
         <h1>Eli Gonzalez</h1>
         <ul class="navigation">
@@ -18,11 +19,14 @@
           <li><a href="about.html" class="nav-link">About</a></li>
           <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
         </ul>
+
+    <!-- This is for mobile use only.  It will be hidden on desktop-->    
         <button class="burger-menu" id="burger-menu">
           <ion-icon class="bars" name="menu-outline"></ion-icon>
         </button>
     </nav>
 
+    <!-- Page Content-->
     <section class="more-about">
         <h2>More About Me</h2>
         <p>
