--- a/personal_site/index.html
+++ b/personal_site/index.html
@@ -9,7 +9,11 @@
     <title>EliGonzalez</title>
 </head>
 <body>
+
+  <!-- Link to JavaScript File-->
+  <script type="text/javascript" src="javascript.js"></script>
     
+  <!-- This is Navbar/Header Section-->
     <nav>
         <h1>Eli Gonzalez</h1>
         <ul class="navigation">
@@ -17,11 +21,14 @@
           <li><a href="about.html" class="nav-link">About</a></li>
           <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
         </ul>
+
+     <!-- This is for mobile use only.  It will be hidden on desktop-->   
         <button class="burger-menu" id="burger-menu">
           <ion-icon class="bars" name="menu-outline"></ion-icon>
         </button>
     </nav>
 
+    <!-- Page Content includes image and brief introduction-->
     <section class="hero" id="about">
         <img
           src="images/eli.jpeg"
@@ -29,6 +36,7 @@
           loading="lazy"
           class="hero-img"
         />
+
         <div class="bio animate__animated animate__shakeX">
           <h2 class="bio-title">About Me</h2>
           <p class="bio-text">
@@ -44,6 +52,13 @@
           </p>
         </div>
   </section>
+
+
+<!-- Footer Section-->
+<footer>
+  <p>Click the button to display Copyright info.</p>
+  <button onclick="myFunction()">Copyright</button>
+</footer>
 
 </body>
 </html>
