--- a/personal_site/portfolio.html
+++ b/personal_site/portfolio.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     
+    <!-- This is Navbar/Header Section-->
     <nav>
         <h1>Eli Gonzalez</h1>
         <ul class="navigation">
@@ -17,14 +18,18 @@
           <li><a href="about.html" class="nav-link">About</a></li>
           <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
         </ul>
+
+        <!-- This is for mobile use only.  It will be hidden on desktop-->
         <button class="burger-menu" id="burger-menu">
           <ion-icon class="bars" name="menu-outline"></ion-icon>
         </button>
     </nav>
 
+    <!-- Page Content-->
     <section class="projects" id="projects">
         <h2 class="projects-title">Some of my School Projects</h2>
 
+        <!-- Section for Project 1.  Includes link to project-->
         <div class="projects-container">
             <div class="project-container project-card">
            <h3 class="project-title">Mobile Web Application</h3>
@@ -34,6 +39,7 @@
             <a href="http://smallbusinessapp.azurewebsites.net/" target="_blank" class="project-link">Check it Out</a>
             </div>
          
+         <!-- Section for Project 2.  Includes link to project-->   
             <div class="project-container project-card">
             <h3 class="project-title">Phone Book Application</h3>
             <p class="project-details">
