--- a/personal_site/contact.html
+++ b/personal_site/contact.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -27,36 +26,33 @@
         </button>
     </nav>
 
-
-        <!-- Page Content includes image and brief introduction-->
-        <section class="hero" id="about">
-            <img
-              src="images/basketball.jpg"
-              alt="eli-gonzalez"
-              loading="lazy"
-              class="hero-img"
-            />
-
     <!-- Page Content-->
     <section class="more-about">
         <h2>More About Me</h2>
+       
         <p>
-            I enjoy applying information technology to business problems in order to find a solution. 
-        </p>
-        <p>
-            I enjoy spending time with my family.  In my free time I enjoy playing basketball.  
+            I love making new professional acquaintances. Reach out if you want to talk technology, business or soccer.
         </p>
      
     </section>
+
+    <h3>Contact Form</h3>
+
+<div class="container">
+  <form id="form">
+    <label for="name">Name</label>
+    <input type="text" id="name" name="name" placeholder="Your name..">
+
+    <label for="email">Email</label>
+    <input type="text" id="email" name="email" placeholder="Your email..">
+
+    <label for="Message">Messsage</label>
+    <textarea id="message" name="message" placeholder="Write something.." style="height:200px"></textarea>
+
+    <input type="submit" value="submit">
+  </form>
+</div>
    
 
 </body>
 </html>
-
-
-
-
-
-
-
-
