--- a/personal_site/contact.html
+++ b/personal_site/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="javascript.js"></script> 
+    
     <title>EliGonzalez</title>
 </head>
 <body>
@@ -49,10 +49,10 @@
     <label for="Message">Messsage</label>
     <textarea id="message" name="message" placeholder="Write something.." style="height:200px"></textarea>
 
-    <input type="submit" value="submit">
+    <input id="submit" type="submit" value="submit">
   </form>
 </div>
    
-
+<script src="javascript.js"></script> 
 </body>
 </html>
